--- a/contact-me.html
+++ b/contact-me.html
@@ -7,7 +7,7 @@
   <body>
     <h1>My Contact Details</h1>
     <p>My Personal Address</p>
-    <p>+91 9490892526</p>
-    <p>H.No#: MIG-II-51, 9th Phase, KPHB Colony, Kukatpally, Hyderabad, Telangana-500072.</p>
+    <p>+91 XXXXXX2526</p>
+    <p>Hyderabad, Telangana-500072.</p>
   </body>
 </html>
