--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <table>
       <tr>
         <td>
-          <img src="images\Kummitha.png" alt="Kummitha Profile Picture">
+          <img src="Kummitha.png" alt="Kummitha Profile Picture">
         </td>
         <td>
           <h1>Kummitha Srini</h1>
